# attentionmatter

./: .gitignore  BENCHMARK.md  Dockerfile  README.md  benchmark.sh  goals.md  ll.md  memory.md  pyproject.toml  requirements-gpu.txt  requirements.txt  roadmap.md  run_intense_benchmark.py  run_poc.py  run_prod_benchmark.py  specificationattenmgr.md  todo.md
.github/workflows/: ci.yml  publish.yml
attn_scorer/: __init__.py  async_scorer.py  bench.py  config.py  feedback.py  models.py  observability.py  plugin.py  scorer.py  streaming.py
attn_scorer/advanced/: __init__.py  classifier.py  cross_encoder.py  dataset.py  evaluation.py  multi_query.py  positional_bias.py
attn_scorer/embeddings/: __init__.py  base.py  local.py  openai.py  openai_async.py
attn_scorer/evaluation/: __init__.py  prod_benchmark.py  prod_dataset.py
attn_scorer/multimodal/: __init__.py  extractors.py  scorer.py  types.py
attn_scorer/sharing/: __init__.py  access_control.py  agent_memory.py
attn_scorer/vector_store/: __init__.py  base.py  brute_force.py  faiss_store.py
azure/: backup.sh  benchmark-config.json  cloud-init.yaml  deploy.sh  provision.sh  restore.sh  teardown.sh  vm_setup.sh
examples/: usage.py
report/: main.tex
results/: azure_benchmark_results.md  intense_benchmark_results.md
src/: __init__.py  config.py  embedding.py  evaluator.py  llm.py  memory.py  reporter.py  runner.py  scenarios.py  tokenizer_service.py
src/strategies/: __init__.py  a3tk_heuristic.py  adaptive.py  base.py  no_pruning.py  (+1 more)
tests/: conftest.py  test_advanced.py  test_feedback.py  test_scorer.py
(+6 files in other folders)
