[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attn-scorer"
version = "1.0.0"
description = "Attention-inspired context scoring and selection for LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Xavier Callens", email = "pxcallen@msp.amadeus.net"},
]
keywords = ["llm", "attention", "context", "scoring", "token-reduction", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.2",
    "torch>=2.0",
]
openai = [
    "openai>=1.0",
]
faiss = [
    "faiss-cpu>=1.7",
]
all = [
    "sentence-transformers>=2.2",
    "torch>=2.0",
    "openai>=1.0",
    "faiss-cpu>=1.7",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/xaviercallens/attentionmatter"
Repository = "https://github.com/xaviercallens/attentionmatter"

[tool.setuptools.packages.find]
include = ["attn_scorer*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
